--- a/TestsSystem/Pages/StudentsMenuPage.xaml
+++ b/TestsSystem/Pages/StudentsMenuPage.xaml
@@ -39,7 +39,7 @@
                       Height="150"
                       Margin="0 10 0 0">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Название теста" Binding="{Binding Tests.Test_name}"/>
+                    <DataGridTextColumn Header="Название теста" Binding="{Binding Tests.Name}"/>
                     <DataGridTextColumn Header="Дата" Binding="{Binding Date}"/>
                     <DataGridTextColumn Header="Оценка" Binding="{Binding Ball}"/>
                 </DataGrid.Columns>
